modificacaoes teste inicial procedimentos com browser diferentes

--- a/CUITCommon/CUITCommon.csproj
+++ b/CUITCommon/CUITCommon.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Abstracts\WebBrowser.cs" />
     <Compile Include="Abstracts\WebElement.cs" />
     <Compile Include="Interfaces\IWebPage.cs" />
+    <Compile Include="Interfaces\IWebFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
