--- a/CUITGenericProduct/CUITGenericProduct.csproj
+++ b/CUITGenericProduct/CUITGenericProduct.csproj
@@ -45,6 +45,7 @@
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Xml" />
+    <Reference Include="WindowsBase" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GenericPage.cs" />
@@ -52,6 +53,7 @@
     <Compile Include="GenericWebFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SearchSelector.cs" />
+    <Compile Include="GenericWebElement.cs" />
     <Compile Include="UIControllExtensions.cs" />
   </ItemGroup>
   <ItemGroup>
